# fritzlogger

./: Cargo.toml  Makefile  README.md
.cargo/: config
scripts/: release_cross.sh
src/: auth.rs  backend.rs  cli.rs  device.rs  main.rs  settings.rs  xml.rs
src/backend/: console.rs  csv.rs
